--- a/css/style.css
+++ b/css/style.css
@@ -21,40 +21,49 @@ header{
     border: solid 2px black;
 }
 
-header h1{
-    font-size: 50px;
-    font-family: Arial, Helvetica, sans-serif;
+.navbar{
+    display: contents;
+}
+
+.navbar img{
+    width: 70px;
+    height: 70px;
+}
+
+.navbar-light .navbar-brand{
+    color: white;
+}
+
+.navbar-light .navbar-nav .nav-link{
+    color: white;
+}
+
+.navbar-light .navbar-nav .nav-link:hover{
+    color: black;
+}
+.navbar a{
+    font-size: 40px;
     font-weight: 700;
-    font-style: italic;
     text-align: left;
     color: white;
-    margin: 10px;
+    margin-right: 30px;
 }
 
-
-
-header nav ul{
-    list-style: none;
-    padding-left: 20px;
+.navbar-nav{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 
-header nav ul li{
-    margin: 15px 10px 15px 10px;
-}
-
-
-
-header nav ul a{
+.navbar .nav-link{
     text-decoration: none;
     color: white;
     font-size: 30px;
+    margin: 10px;
     transition: 1s;
 }
-header nav ul a:hover{
-    color: rgb(0, 0, 0);
-}
+
 
 
 /* !MAIN INDEX */
@@ -75,7 +84,7 @@ header nav ul a:hover{
     flex-wrap: wrap;
 }
 
-.hero h2{
+.hero h1{
     font-size: 60px;
     font-weight: bold;
     color: white;
@@ -192,7 +201,7 @@ header nav ul a:hover{
 }
 
 
-.productos h2{
+.productos h1{
     color: black;
     font-size: 40px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -280,12 +289,12 @@ header nav ul a:hover{
 /* !PAGINA DE SERVICIOS */
 .servicios{
     width: 100%;
-    height: 5000px;
+    height: 3500px;
     background-color: lightskyblue;
     background-size: cover;
 }
 
-.servicios h2{
+.servicios h1{
     font-size: 40px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 300;
@@ -307,6 +316,11 @@ header nav ul a:hover{
     -webkit-box-shadow: 10px 11px 36px 1px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 11px 36px 1px rgba(0,0,0,0.75);
     margin: 10px;
+    transition: 0.5s;
+}
+
+.grid-galeria div img:hover{
+    transform: scale(1.1);
 }
 
 .img-1{
@@ -325,17 +339,12 @@ header nav ul a:hover{
     width: 100%;
     height: 100vh;
     background-color: lightskyblue;
-    background-size: cover;
-    display: grid;
-    grid-template-rows: 200px 200px 200px;
-    grid-template-columns: repeat(3,1fr);
-    gap: 10px;
     border: 3px solid black;
 }
 
 .contacto .form{
-    border: 2px solid red;
-    background-color: burlywood;
+    border: 2px solid rgba(0, 0, 0, 0.621);
+    background-color: rgba(222, 184, 135, 0.471);
 }
 
 .contacto h1{
@@ -352,12 +361,11 @@ header nav ul a:hover{
 
 .nosotros{
     width: 100%;
-    height: 100vh;
     background-color: lightskyblue;
     background-size: cover;
 }
 
-.nosotros h2{
+.nosotros h1{
     font-size: 60px;
     font-weight: 600;
     text-align: center;
@@ -367,6 +375,10 @@ header nav ul a:hover{
     font-size: 20px;
     font-weight: 200;
     text-align: center;
+}
+.nosotros img{
+    width: 100%;
+    height: 600px;
 }
 
 /* !FOOTER */
@@ -438,13 +450,6 @@ footer a img:hover{
 }
 
 @media screen and (max-width:1199px){
-    /* INDEX */
-    header{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-    }
     .texto p{
         font-size: 20px;
         font-family: 'Times New Roman', Times, serif;
@@ -477,10 +482,7 @@ footer a img:hover{
         width: 180px;
         height: 120px;
     }
-    /* PRODUCTOS */
-    /* .productos .productosUno{
-        flex-direction: column;
-    } */
+    
     .productos div h3{
         font-size: 20px;
     }
@@ -497,23 +499,18 @@ footer a img:hover{
 
 @media screen and (max-width:665px){
     /* INDEX */
-    header{
-        flex-direction: column;
+    .navbar img{
+        width: 55px;
+        height: 55px;
     }
-    header nav ul{
-        flex-direction: column;
-    }
-    header nav ul li{
-        margin: 5px;
-    }
-    header h1{
+    .navbar a{
         font-size: 30px;
-        font-family: Arial, Helvetica, sans-serif;
-        font-weight: 700;
-        font-style: italic;
-        text-align: left;
-        color: white;
-        margin: 5px;
+    }
+    .navbar-nav{
+        flex-direction: column;
+    }
+    .navbar-nav .nav-item .nav-link{
+        font-size: 25px;;
     }
     /* PRODUCTOS */
     .productos h2{
@@ -556,13 +553,6 @@ footer a img:hover{
 }
 
 @media screen and (max-width:585px){
-    /* INDEX */
-    header h1{
-        font-size: 30px;
-    }
-    header nav ul a{
-        font-size: 25px;
-    }
     .hero h2{
         font-size: 30px;
     }
@@ -570,12 +560,7 @@ footer a img:hover{
 
 @media screen and (max-width:380px){
     /* INDEX */
-    header h1{
-        margin: 5px;
-    }
-    header nav ul li{
-        margin: 3px;
-    }
+    
     .hero p{
         font-size: 15px;
     }
