--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -79,7 +79,7 @@
             }
             img{
                 width: 200px;
-                height: 200px;
+                height: 220px;
             }
         }
     }
@@ -90,10 +90,10 @@
             grid-template-columns: repeat(2,1fr);
             grid-auto-rows: 300px;
             gap: 10px;
-            width: fit-content;
+            width: 100%;
             div{
                 img{
-                    width: 90%;
+                    width: 97%;
                     height: 100%;
                     margin: 6px;
                 }
@@ -106,6 +106,10 @@
                 grid-row: span 1;
             }
         }
+    }
+    // footer
+    footer{
+        width: 100%;
     }
 }
 
@@ -136,13 +140,22 @@
                 font-size: nth($fuente, 6);
             }
             img{
-                width: 150px;
-                height: 150px;
+                width: 185px;
+                height: 242px;
                 margin: 5px;
             }
             a{
                 font-size: nth($fuente, 6);
                 margin-left: 15px;
+            }
+        }
+    }
+    // servicios
+    .servicios{
+        height: 2925px;
+        .grid-galeria{
+            div{
+                padding-bottom: 20px;
             }
         }
     }
@@ -152,6 +165,52 @@
             width: 600PX;
             height: 400px;
             margin-left: 20px;
+            padding-bottom: 20px;
+        }
+    }
+}
+
+@media screen and (max-width:835px){
+    .productos{
+        div{
+            h3{
+                font-size: nth($fuente, 6);
+            }
+            img{
+                width: 160px;
+                height: 230px;
+                margin: 5px;
+            }
+            a{
+                font-size: nth($fuente, 6);
+                margin-left: 15px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:735px){
+    .productos{
+        .productosUno{
+            margin: 0;
+        }
+        .productosDos{
+            margin: 0;
+        }
+        div{
+            margin-bottom: 20px;
+            h3{
+                font-size: nth($fuente, 6);
+            }
+            img{
+                width: 250px;
+                height: 242px;
+                margin: 5px;
+            }
+            a{
+                font-size: nth($fuente, 6);
+                margin-left: 15px;
+            }
         }
     }
 }
@@ -214,7 +273,8 @@
             grid-template-columns: 1fr;
             grid-auto-rows: 300px;
             gap: 10px;
-            width: fit-content;
+            width: 100%;
+            padding: 10px;
             div{
                 img{
                     width: 95%;
@@ -230,6 +290,7 @@
             width: 400PX;
             height: 300px;
             margin-left: 20px;
+            padding-bottom: 20px;
         }
     }
     // footer
@@ -253,14 +314,24 @@
     // nosotros
     .nosotros{
         img{
-            width: 300PX;
-            height: 200px;
+            width: 350PX;
+            height: 300px;
             margin-left: 20px;
+            padding-bottom: 15px;
         }
     }
 }
 
 @media screen and (max-width:380px){
+    .fixed{
+        position: fixed;
+        right: 5px;
+        bottom: 5px;
+        img{
+            width: 115px;
+            height: 60px;
+        }
+    }
     // index
     .hero{
         p{
@@ -296,20 +367,29 @@
             }
         }
     }
+    // servicios
     .servicios{
-        height: 5700px;
+        height: 5750px;
         .grid-galeria{
             grid-template-columns: 1fr;
             grid-auto-rows: 300px;
-            gap: 10px;
-            width: fit-content;
+            gap: 5px;
+            width: 100%;
             div{
+                padding-bottom: 5px;
                 img{
                     width: 95%;
                     height: 85%;
                     margin: 4px;
                 }
             }
+        }
+    }
+    // nosotros
+    .nosotros{
+        img{
+            width: 300px;
+            height: 250px;
         }
     }
 }
