--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -197,7 +197,8 @@
                 -webkit-box-shadow: 10px 11px 36px 1px rgba(0,0,0,0.75);
                 -moz-box-shadow: 10px 11px 36px 1px rgba(0,0,0,0.75);
                 margin: 10px;
-                transition: 0.5s;
+                padding: 10px;
+                transition: 0.2s;
                 &:hover{
                     transform: scale(1.1);
                 }
@@ -256,6 +257,7 @@
         width: 90%;
         height: 600px;
         margin-left: 20px;
+        padding: 20px;
     }
 }
 
