--- a/css/estilos.css
+++ b/css/estilos.css
@@ -65,11 +65,15 @@ header {
   .hero h1 {
     font-size: 60px;
     font-weight: bold;
-    color: white; }
+    color: white;
+    padding-left: 10px;
+    padding-right: 10px; }
   .hero p {
     font-size: 20px;
     font-weight: 100;
-    color: white; }
+    color: white;
+    padding-left: 10px;
+    padding-right: 10px; }
 
 .texto {
   width: 100%;
@@ -81,7 +85,9 @@ header {
     font-size: 20px;
     font-family: 'Times New Roman', Times, serif;
     color: black;
-    padding-top: 20px; }
+    padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px; }
 
 .partidos {
   background-color: lightskyblue;
@@ -95,7 +101,9 @@ header {
     font-size: 40px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px; }
   .partidos .partidosGrupos {
     margin: 25px; }
   .partidos .partidosEliminacion {
@@ -203,7 +211,8 @@ header {
     font-size: 40px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    padding: 15px;
     text-align: center; }
   .servicios .grid-galeria {
     display: grid;
@@ -236,10 +245,20 @@ header {
   background-color: lightskyblue;
   border: 3px solid black; }
   .contacto h1 {
-    font-size: 30px;
-    font-weight: 300;
+    color: black;
+    font-size: 40px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-bottom: 20px; }
+    font-weight: bold;
+    margin: 20px;
+    padding: 10px;
+    text-align: center; }
+  .contacto p {
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    color: black;
+    padding-top: 20px;
+    text-align: center;
+    padding: 10px; }
   .contacto .form {
     border: 2px solid rgba(0, 0, 0, 0.621);
     background-color: rgba(222, 184, 135, 0.471); }
@@ -254,13 +273,19 @@ header {
   flex-direction: column;
   flex-wrap: wrap; }
   .nosotros h1 {
+    color: black;
     font-size: 40px;
-    font-weight: 600;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    margin: 20px;
+    padding: 10px;
     text-align: center; }
   .nosotros p {
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 200;
-    text-align: center; }
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px; }
   .nosotros img {
     width: 90%;
     height: 600px;
@@ -444,7 +469,9 @@ footer {
     margin-left: 20px;
     padding-bottom: 10px; }
   .servicios {
-    height: 5700px; }
+    height: 5780px; }
+    .servicios h1 {
+      font-size: 30px; }
     .servicios .grid-galeria {
       grid-template-columns: 1fr;
       grid-auto-rows: 300px;
