--- a/css/estilos.css
+++ b/css/estilos.css
@@ -260,8 +260,13 @@ header {
     text-align: center;
     padding: 10px; }
   .contacto .form {
+    font-size: 15px;
+    font-weight: bold;
     border: 2px solid rgba(0, 0, 0, 0.621);
     background-color: rgba(222, 184, 135, 0.471); }
+    .contacto .form h2 {
+      font-size: 15px;
+      font-weight: bold; }
 
 .nosotros {
   width: 100%;
